Added bulk method to get wishes for list of users