@@ -5,7 +5,9 @@ import com.dm.secretsanta.entities.WishListContainer;
 import com.dm.secretsanta.repositories.WishRepository;
 import jakarta.transaction.Transactional;
 import java.math.BigDecimal;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -27,13 +29,23 @@ public class WishListContainerService {
   public boolean addWishToList(WishListContainer wishListContainer, List<Wish> wishes) {
     return wishListContainer.getWishList().addAll(wishes);
   }
-  
-  public List<Wish> getWishesInPriceRange(String email, BigDecimal lowerLimit, BigDecimal higherLimit){
+
+  public Map<String, List<Wish>> getWishesInPriceRange(List<String> email, BigDecimal lowerLimit,
+      BigDecimal higherLimit) {
+    Map<String, List<Wish>> wishMap = new HashMap<>();
+    email.forEach(m -> wishMap.put(m, getWishesInRangeForMember(m, lowerLimit, higherLimit)));
+
+    return wishMap;
+  }
+
+  List<Wish> getWishesInRangeForMember(String email, BigDecimal lowerLimit,
+      BigDecimal higherLimit) {
     var wishes = getWishListContainer(email).getWishList();
 
     return wishes.stream()
         .filter(wish -> wish.getPrice().compareTo(lowerLimit) >= 0)
-        .filter(wish -> wish.getPrice().compareTo(higherLimit) <= 0).toList();
+        .filter(wish -> wish.getPrice().compareTo(higherLimit) <= 0).collect(Collectors.toList());
+
   }
 
 }
